# Collision-Detection-Ros

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  repos.yml
Docker/: Dockerfile
collision_detection_launch/: CMakeLists.txt  package.xml  setup.py
collision_detection_launch/config/: controllers.yaml  default_kinematics.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  physical_parameters.yaml  ur5e_update_rate.yaml  ur_servo.yaml  visual_parameters.yaml
collision_detection_launch/config/srdf/: iiwa7.srdf  shared.srdf.xacro  test
collision_detection_launch/include/: trajectory_generator.hpp
collision_detection_launch/launch/: collision_detection_launch.launch.py  trajectory_generator_ur.launch.py
collision_detection_launch/src/: trajectory_generator.cpp  trajectory_generator_node.cpp
collision_detection_launch/urdf/: iiwa7.urdf.xacro  iiwa7_description.urdf.xacro  new.urdf  setup.cfg  shared.urdf.xacro  ur.urdf.xacro  ur_macro.xacro
collision_detection_launch/urdf/src/: trajectory_generator_node.cpp
collision_detection_msgs/: CMakeLists.txt  package.xml
collision_detection_msgs/srv/: GenerateTrajectory.srv
config/: controllers.yml
install/: local_setup.sh  setup.sh
urdf/: package.xml
urdf/install/: setup.bash  setup.ps1  setup.zsh
urdf/install/collision_detection_launch/share/collision_detection_launch/: package.bash  package.zsh
urdf/launch/: collision_detection_launch.launch.py  trajectory_generator_ur.launch.py
urdf/log/: latest_build
