<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>collision_detection_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="au616728@uni.au.dk">jens</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend> collision_detection_msgs</depend>
  <depend> std_srvs </depend>
  <depend> moveit_core</depend>
  <depend> moveit_ros_planning_interface</depend>
  <build_depend> moveit_ros_planning</build_depend>
  <build_depend> moveit_common</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
